--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-raleway);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,10 +18,17 @@
   }
 }
 
+.font-oswald {
+  font-family: var(--font-oswald);
+}
+.font-raleway {
+  font-family: var(--font-raleway)
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-oswald);
 } 
 
 html {
