--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
  @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #000000;
+  --foreground: #ffffff;
 }
 
 @theme inline {
@@ -11,12 +11,6 @@
   --font-sans: var(--font-raleway);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 .font-oswald {
   font-family: var(--font-oswald);
