--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,5 @@
  @import "tailwindcss";
 
-:root {
-  --background: #000000;
-  --foreground: #ffffff;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-raleway);
-}
 
 
 .font-oswald {
@@ -19,11 +9,12 @@
   font-family: var(--font-raleway)
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
+html, body {
   font-family: var(--font-oswald);
-} 
+  scroll-behavior: smooth;
+  background-color: black; 
+  color: white; 
+}
 
 html {
   scroll-behavior: smooth;
